# hydroxide

./: .gitlab-ci.yml  CHANGELOG.md  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  rust.yml  typescript.yml
src-frontend/: .prettierignore  README.md  package-lock.json  package.json  tsconfig.json
src-frontend/public/: index.html
src-frontend/public/config/: env.js
src-frontend/public/locales/en/: translation.json
src-frontend/src/: App.test.tsx  App.tsx  config.ts  i18n.ts  index.tsx  ipc.ts  setupTests.ts
src-frontend/src/api/: axios-instance.ts  errors.ts
src-frontend/src/api/About/: About.ts
src-frontend/src/bindings/: Category.ts  CategoryForImport.ts  Project.ts  ProjectForCreate.ts  ProjectForImport.ts  ProjectForUpdate.ts  TimeRecord.ts  TimeRecordForImport.ts  index.ts  type_asserts.ts
src-frontend/src/hooks/: useModalForm.ts
src-frontend/src/model/: index.ts
src-frontend/src/store/: auth.ts  categories.test.ts  categories.ts  index.ts  projects.test.ts  projects.ts  rootReducer.ts  settings.ts  timeRecords.test.ts  timeRecords.ts
src-frontend/src/utils/: formHelpers.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: ctx.rs  error.rs  event.rs  ipc.rs  main.rs  model.rs  prelude.rs  store.rs  utils.rs
src-tauri/src/ipc/: category.rs  import.rs  params.rs  project.rs  response.rs  time_record.rs
src-tauri/src/model/: base.rs  category.rs  project.rs  time_record.rs
src-tauri/src/store/: try_froms.rs  x_takes.rs
src-tauri/src/utils/: x_take.rs
(+83 files in other folders)
