[package]
name = "hydroxide"
version = "1.0.2"
description = "A desktop time tracker"
authors = ["Anthony Oteri"]
license = ""
repository = "https://gitlab.oteri.xyz/anthonyoteri/hydroxide"
default-run = "hydroxide"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.5", features = ["app-all", "dialog-open", "fs-read-file"] }
tokio = { version = "1.24.2", features = ["full"] }
thiserror = "1.0.38"
serde_with_macros = "3.3.0"
surrealdb = { version = "1.0.0-beta.8", default_features=false, features = ["parallel", "kv-rocksdb"] }
parking_lot = "0.12.1"
ts-rs = "7.0.0"
chrono = "0.4.23"
env_logger = "0.10.0"
log = "0.4.20"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
